--- a/css/styles.css
+++ b/css/styles.css
@@ -10850,6 +10850,7 @@ p.lead {
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
   letter-spacing: 0.05rem;
+  font-size: 24px;
 }
 #sideNav .navbar-toggler:focus {
   outline-color: #d48a6e;
